--- a/.github/workflows/LintAndTest.yml
+++ b/.github/workflows/LintAndTest.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: npm run coverage
+        run: npm test
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
